# cmake_arduino

./: .gitignore  CMakeLists.txt
cmake/: add_target_executable.cmake  avr-toolchain.cmake  fetch_arduinocore.cmake
src/: L3G.cpp  L3G.h  LSM303.cpp  LSM303.h  calib_gyro.cpp  main.cpp  matrix.hpp  test.cpp
tools/: print_serial.py
